# ms-todo-sync

./: LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
scripts/: ms-todo-sync.py
