[project]
name = "ms-todo-sync"
version = "1.0.2"
description = "A CLI tool to manage Microsoft To Do tasks via Microsoft Graph API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "xiaoski", email = "xiaoski@qq.com"}
]
keywords = ["microsoft", "todo", "tasks", "productivity", "cli", "graph-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "msal>=1.34.0",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/xiaoski/ms-todo-sync"
Repository = "https://github.com/xiaoski/ms-todo-sync"
Issues = "https://github.com/xiaoski/ms-todo-sync/issues"
